# OSEngine

./: CMakeLists.txt  TODO  camera.h  cimgui.h  clipping.cpp  clipping.h  display.cpp  display.h  drawing.cpp  drawing.h  example_ttf.cpp  font.h  game_snake.cpp  graphic_pipeline.cpp  graphic_pipeline.h  gui.h  keyboard.h  light.h  macros.h  main.cpp  math.h  matrix.h  matrix.hpp  mesh.cpp  mesh.h  mouse.h  os_engine.h  os_engine.hpp  oscolor.h  oscolor.hpp  osfont.h  osgui.h  osgui.hpp  osimgui.h  osmacros.h  osmath.h  osmath.hpp  osrenderer.h  polygon.cpp  polygon.h  (+12 more)
examples/: game_snake.cpp  space_shooter.cpp  teste_math.cpp  teste_polygon.cpp
src/: cimgui.h  color.h  display.cpp  display.h  drawing.cpp  drawing.h  graphic_pipeline.cpp  graphic_pipeline.h  gui.h  light.cpp  macros.h  main.cpp  matrix.h  mesh.cpp  mesh.h  mouse.h  polygon.cpp  polygon.h  renderer.h  texture.cpp  triangle.cpp  triangle.h  vector.h
